fixed transition bug on mobile

--- a/src/components/NavbarSimple.module.css
+++ b/src/components/NavbarSimple.module.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   border-right: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
   position: fixed;
-  /* z-index: 500;  */
+  z-index: 500;  
   background-color: var(--mantine-color-body); 
 }
 
